--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.21",
+    "@supabase/ssr": "^0.6.1",
+    "@tanstack/react-query": "^5.83.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
